--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,170 @@ body {
 }
 
 .chatbot {
+    position: relative;
     width: 420px;
     background: white;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 }
+
+.chatbot .chatbot-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #6a3a7a;
+    padding: 15px 22px;
+}
+
+.chatbot-header .header-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.header-info svg {
+    width: 35px;
+    height: 35px;
+    background: white;
+    border-radius: 50%;
+    padding: 6px;
+    fill: #c6adec;
+    flex-shrink: 0;
+}
+
+.header-info .logo-text {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.chatbot-header button {
+    border: none;
+    height: 40px;
+    width: 40px;
+    outline: none;
+    background: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 25px;
+    margin-right: -10px;
+    padding-top: 2px;
+    border-radius: 50%;
+    transition: 0.3s ease;
+}
+
+.chatbot-header button:hover {
+    background: #9956ff;
+}
+
+.chatbot-body {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    overflow-y: auto;
+    padding: 25px 22px;
+    height: 460px;
+    margin-bottom: 82px;
+}
+
+.chatbot-body .message {
+    display: flex;
+    align-items: center;
+    gap: 11px;
+}
+
+.chatbot-body .bot-message svg {
+    height: 35px;
+    width: 35px;
+    padding: 5px;
+    border-radius: 50%;
+    background: #9956ff;
+    fill: #fff;
+    margin-bottom: 2px;
+    flex-shrink: 0;
+    align-self: flex-end;
+}
+
+.chatbot-body .message .message-text {
+    max-width: 75%;
+    padding: 12px 16px;
+    word-wrap: break-word;
+    font-size: 14px;
+    white-space: pre-line;
+}
+
+.chatbot-body .bot-message .message-text {
+    border-radius: 13px 13px 13px 3px;
+    background: #f2f1f3;
+}
+
+.chatbot-body .user-message {
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.chatbot-body .user-message .message-text {
+    border-radius: 13px 13px 3px 13px;
+    background: #9956ff;
+    color: #fff;
+}
+
+.chatbot-footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: #fff;
+    padding: 16px 22px 20px;
+}
+
+.chatbot-footer .chat-form {
+    display: flex;
+    align-items: center;
+    background: #fff;
+    outline: 1px solid #cccce5;
+    border-radius: 32px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+}
+
+.chatbot-footer .chat-form:focus-within {
+    outline: 2px solid #d1c1e9;
+
+}
+
+.chat-form .message-input {
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 14px;
+    height: 47px;
+    padding: 0 15px;
+    width: 100%;
+}
+
+.chat-form button {
+    display: none;
+    height: 30px;
+    width: 30px;
+    background: #9956ff;
+    color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    flex-shrink: 0;
+    cursor: pointer;
+    font-size: 18px;
+    margin-right: 5px;
+    transition: 0.3s ease;
+}
+
+.chat-form button:hover {
+    background: #7821ff;
+}
+
+.chat-form .message-input:valid ~ button {
+    display: block;
+}
+
+
+
