--- a/src/index.css
+++ b/src/index.css
@@ -12,18 +12,48 @@ body {
     width: 100%;
     min-height: 100vh;
     background: linear-gradient(#e5e5e7, #c6adec);
+}
+
+#chatbot-toggler {
+    position: fixed;
+    bottom: 30px;
+    right: 35px;
+    border: none;
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background: #7821ff;
+    border-radius: 50%;
+}
+
+#chatbot-toggler span {
+    color: #fff;
+    position: absolute;
 }
 
 .chatbot {
-    position: relative;
+    position: fixed;
+    opacity: 0;
+    pointer-events: none;
+    bottom: 90px;
+    right: 35px;
     width: 420px;
     background: white;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    transform: scale(0.2);
+    transform-origin: bottom right;
+    transition: all 0.1s ease;
+}
+
+.container.show-chatbot .chatbot {
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
 }
 
 .chatbot .chatbot-header {
@@ -81,7 +111,7 @@ body {
     gap: 20px;
     overflow-y: auto;
     padding: 25px 22px;
-    height: 460px;
+    height: 400px;
     margin-bottom: 82px;
     scrollbar-width: thin;
     scrollbar-color: #d1c1e9 transparent;
