--- a/src/index.css
+++ b/src/index.css
@@ -216,4 +216,32 @@ body {
 }
 
 
+/*Responsive media for mobile*/
+@media (max-width: 520px) {
+    #chatbot-toggler {
+        right: 20px;
+        bottom: 20px;
+    }
+
+    .chatbot {
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+
+    .chatbot.chatbot-header {
+        padding: 12px 16px;
+    }
+
+    .chatbot-body {
+        height: calc(90% - 55px);
+        padding: 25px 15px;
+    }
+
+    .chatbot-footer {
+        padding: 10px 15px 15px;
+    }
+}
 
