--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,10 @@ body {
     gap: 11px;
 }
 
+.chatbot-body .message.error .message-text {
+    color: red;
+}
+
 .chatbot-body .bot-message svg {
     height: 35px;
     width: 35px;
